			  - 2002-06-05:  Added language specific separator for thousands and decimals  (Niels)
			  - 2002-06-05:  Changed the alignment of most columns in the statistics to the right, for better readability  (Niels)
			  - 2002-06-07:  Added total of the period in email reports  (Matteo)
			  - 2002-06-12:	 Added check for MySQL user privileges before upgrading  (Niels)


			+ Misc bugfixes
			  - 2001-10-17:  Removed extra comma from config.inc  (Matteo) 
			  - 2001-10-19:  Removed background color for flash banner; lets see if it's better... (Stefan) 
			  - 2001-10-22:  Fixed bug which prevented IP/hostname detection for ACLs, ignored hosts and logging when 'x-http-forwarded-for' header was set to 'unknown' by the proxy  (Matteo) 
			  - 2001-10-24:  Fixed warning 'No DB connection'  (Niels) 
			  - 2001-10-24:  Destination cookie sometimes had wrong value  (Niels) 
			  - 2001-10-26:  AdClick history for mailed reports was limited to 7 days  (Niels) 
			  - 2001-10-27:  Fixed duplicate dblib include and phpAds_path problem  (Niels) 
			  - 2001-11-02:  Database connection will always be kept open, because it might be shared with another script  (Niels) 
			  - 2001-11-02:  phpAds_path problem fixed when using the maintenance script  (Niels) 
			  - 2001-11-02:  Made phpAds_path available to admin files  (Niels) 
			  - 2001-11-02:  Fixed misc. E_ALL warnings  (Niels) 
			  - 2001-11-09:  Target was replaced in HTML banners, even if the new target was empty  (Niels) 
			  - 2001-11-10:  Link to ACL page was shown even if they were disabled  (Niels) 
			  - 2001-11-10:  Removed extra return at the end of the banner-edit.php file  (Niels) 
			  - 2001-11-16:  Zonecache still included banners  (Niels) 
			  - 2001-11-16:  Zones admin files needed view.inc.php include: added it to lib-zones  (Matteo) 
			  - 2001-11-17:  Changed \n to \r\n in e-mail headers  (Niels) 
			  - 2001-11-18:  Fixed some left old style config vars in lib-expire (Matteo) 